--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -76,8 +76,8 @@
 
     p {
       width: 100%;
-      text-transform: uppercase;
-      text-align: right;
+      // text-transform: uppercase;
+      // text-align: right;
     }
   }
 
@@ -92,6 +92,7 @@
   @media screen and (max-width: 1200px) {
     justify-content: flex-start;
     align-items: flex-start;
+    // font-size: 2rem;
   }
 }
 
